--- a/Pages/Portfolio.html
+++ b/Pages/Portfolio.html
@@ -21,13 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/Pages/Index.html">Home</a>
+                        <a class="nav-link" href="../Pages/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Pages/About.html">About</a>
+                        <a class="nav-link" href="../Pages/About.html">About</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/Pages/Portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../Pages/Portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
